<resources>
    <string name="app_name" translatable="false">Styx Browser</string>
    <string name="app_version_name" translatable="false">\"Cyna\"</string>
    <string name="accent_amber">Amber</string>
    <string name="accent_blue">Blue</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_cyan">Cyan</string>
    <string name="accent_deep_orange">Deep Orange</string>
    <string name="accent_deep_purple">Deep Purple</string>
    <string name="action_back">Back</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_forward">Forward</string>
    <string name="content_control_update_frequency">Automatic update frequency</string>
    <string name="content_control_update_mode">Automatic update</string>
    <string name="agent">User agent</string>
    <string-array name="block_javascript">
        <item>@string/no</item>
        <item>@string/unlisted_javascript</item>
        <item>@string/listed_javascript</item>
    </string-array>
    <string name="bookmark_in_new_tab">Bookmark in new tab</string>
    <string name="close_on_last_tab">Close browser with last tab</string>
    <string name="color_mode">Color mode</string>
    <string name="cookies">Enable cookies</string>
    <string name="enable">Enable</string>
    <string name="force_zoom_summary">Does not work if JavaScript is not enabled</string>
    <string name="force_zoom">Force zoom for websites</string>
    <string name="home">Homepage</string>
    <string name="homepage_in_new_tab">Homepage in new tab</string>
    <string name="image_url">Set background image for search engine</string>
    <string name="import_export_settings">Import &amp; Export</string>
    <string name="incognito_cookies">Enable cookies in incognito mode</string>
    <string name="java">Enable JavaScript</string>
    <string name="load_images">Load images</string>
    <string name="long_press_tab">Long press on the \"Tab\" icon opens a new tab</string>
    <string name="new_tab_position">New tab position</string>
    <string name="overViewMode">Load pages in overview mode</string>
    <string name="pref_category_filters">Filters</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_landscape">Landscape</string>
    <string name="pref_category_summary_filters">Local or remote files defining your content control rules</string>
    <string name="pref_category_portrait">Portrait</string>
    <string name="pref_summary_close_drawer">Automatically close Drawer after creating or deleting a tab</string>
    <string name="pref_summary_desktop_width">Desktop mode viewport width, set it higher for smaller content</string>
    <string name="pref_summary_locked_drawers">Tabs and Bookmarks drawers are locked</string>
    <string name="pref_summary_menu_show_exit">Incognito mode always displays the button</string>
    <string name="pref_summary_tab_list_item_show_close_button">Display close tab buttons on tab list items</string>
    <string name="pref_summary_use_bottom_sheets">Tabs and Bookmarks are shown in bottom sheets instead of side drawers</string>
    <string name="pref_title_close_drawer">Close drawer</string>
    <string name="pref_title_desktop_width">Desktop width</string>
    <string name="pref_title_download_dialog">Show download dialog</string>
    <string name="pref_title_hide_status_bar">Hide status bar</string>
    <string name="pref_title_hide_tool_bar">Hide tool bar when scrolling down</string>
    <string name="pref_title_locked_drawers">Locked drawers</string>
    <string name="pref_title_menu_show_exit">Show \"Exit\" Button in Menu</string>
    <string name="pref_title_pull_to_refresh">Pull to refresh</string>
    <string name="pref_title_tab_list_item_show_close_button">Show close tab button</string>
    <string name="pref_title_use_bottom_sheets">Use bottom sheets</string>
    <string name="recommended">Recommended</string>
    <string name="reflow">Enable text reflow</string>
    <string name="restore_tabs_on_startup">Restore tabs on startup</string>
    <string name="save_data">Request \'Save-Data\'</string>
    <string name="search_in_new_tab">Search in new tab</string>
    <string name="search_suggestions">Search suggestions</string>
    <string name="search">Search engine</string>
    <string name="settings_about">About</string>
    <string name="settings_content_control">Content control</string>
    <string name="settings_advanced">Advanced</string>
    <string name="settings_black_status_bar">Black status bar</string>
    <string name="settings_content_blocking">Content Blocking</string>
    <string name="settings_display">Look &amp; feel</string>
    <string name="settings_general">General</string>
    <string name="settings_portrait_landscape">Portrait &amp; Landscape</string>
    <string name="settings_privacy">Privacy</string>
    <string name="settings_summary_about">Version, author, license…</string>
    <string name="settings_summary_apps">Third party applications…</string>
    <string name="settings_summary_content_control">Ads blocker and content filtering</string>
    <string name="settings_summary_content_control_toggle">Activate ads blocker and content filtering</string>
    <string name="settings_summary_dark_mode_default">Define if new tabs use force dark mode by default</string>
    <string name="settings_summary_desktop_mode_default">Define if new tabs use desktop mode by default</string>
    <string name="settings_summary_display">App design, accent color, color mode…</string>
    <string name="settings_summary_general">Homepage, search services, JavaScript…</string>
    <string name="settings_summary_import_export">Backup, restore, reset…</string>
    <string name="settings_summary_tabs">Tab position, new tab, bottom sheets…</string>
    <string name="settings_summary_portraitlandscape">Pull-to-Refresh, toolbar, drawer…</string>
    <string name="settings_summary_privacy">Cache, history, cookies…</string>
    <string name="settings_summary_vertical_tab_bar">Disable it to use tabs in navigation drawer</string>
    <string name="settings_title_apps">Apps</string>
    <string name="settings_title_dark_mode_default">Force dark mode</string>
    <string name="settings_title_desktop_mode_default">Desktop mode</string>
    <string name="settings_title_toolbars_bottom">Toolbars at the bottom</string>
    <string name="show_ssl">Show SSL warning dialogs</string>
    <string name="show_undo_tab">Show \"Undo\" button when a tab is closed</string>
    <string name="suggest">Search suggestions (number)</string>
    <string name="swap_bookmarks_and_tabs">Swap bookmark and tab drawers</string>
    <string name="tabs_in_drawer">Show tabs in navigation drawer</string>
    <string name="tabs">Tabs</string>
    <string name="text_encoding">Text encoding</string>
    <string name="theme">Theme</string>
    <string name="title_text_size">Text size</string>
    <string name="update_message">Show update notification when starting the browser</string>
    <string name="url_in_new_tab">URL in new tab</string>
    <string name="vibrate_on_tab_close">Vibrate when a tab is closed</string>
    <string name="wideViewPort">Use wide viewport</string>
    <string name="window">Allow sites to open new windows</string>
    <string name="new_tab_position_after_value" translatable="false">AFTER_CURRENT_TAB</string>
    <string name="pref_key_filterlist_auto_update" translatable="false">pref_key_filterlist_auto_update</string>
    <string name="pref_key_filterlist_auto_update_frequency" translatable="false">pref_key_filterlist_auto_update_frequency</string>
    <string name="pref_key_bookmark_in_new_tab" translatable="false">pref_key_bookmark_in_new_tab</string>
    <string name="pref_key_close_drawer" translatable="false">pref_key_close_drawer</string>
    <string name="pref_key_content_control" translatable="false">pref_key_content_control</string>
    <string name="pref_key_content_control_filters" translatable="false">pref_key_content_control_filters</string>
    <string name="pref_key_cookies_incognito" translatable="false">pref_key_cookies_incognito</string>
    <string name="pref_key_cookies" translatable="false">pref_key_cookies</string>
    <string name="pref_key_dark_mode_default" translatable="false">pref_key_dark_mode_default</string>
    <string name="pref_key_default_text_encoding" translatable="false">pref_key_default_text_encoding</string>
    <string name="pref_key_desktop_mode_default" translatable="false">pref_key_desktop_mode_default</string>
    <string name="pref_key_homepage_in_new_tab" translatable="false">pref_key_homepage_in_new_tab</string>
    <string name="pref_key_javascript" translatable="false">pref_key_javascript</string>
    <string name="pref_key_landscape_desktop_width" translatable="false">pref_key_landscape_desktop_width</string>
    <string name="pref_key_landscape_hide_status_bar" translatable="false">pref_key_landscape_hide_status_bar</string>
    <string name="pref_key_landscape_hide_tool_bar" translatable="false">pref_key_landscape_hide_tool_bar</string>
    <string name="pref_key_landscape_pull_to_refresh" translatable="false">pref_key_landscape_pull_to_refresh</string>
    <string name="pref_key_landscape_tab_bar_vertical" translatable="false">pref_key_landscape_tab_bar_vertical</string>
    <string name="pref_key_landscape_toolbars_bottom" translatable="false">pref_key_landscape_toolbars_bottom</string>
    <string name="pref_key_load_images" translatable="false">pref_key_load_images</string>
    <string name="pref_key_locked_drawers" translatable="false">pref_key_locked_drawers</string>
    <string name="pref_key_menu_show_exit" translatable="false">pref_key_menu_show_exit</string>
    <string name="pref_key_new_tab_position" translatable="false">pref_key_new_tab_position</string>
    <string name="pref_key_portrait_desktop_width" translatable="false">pref_key_portrait_desktop_width</string>
    <string name="pref_key_portrait_hide_status_bar" translatable="false">pref_key_portrait_hide_status_bar</string>
    <string name="pref_key_portrait_hide_tool_bar" translatable="false">pref_key_portrait_hide_tool_bar</string>
    <string name="pref_key_portrait_pull_to_refresh" translatable="false">pref_key_portrait_pull_to_refresh</string>
    <string name="pref_key_portrait_tab_bar_vertical" translatable="false">pref_key_portrait_tab_bar_vertical</string>
    <string name="pref_key_portrait_toolbars_bottom" translatable="false">pref_key_portrait_toolbars_bottom</string>
    <string name="pref_key_request_save_data" translatable="false">pref_key_request_save_data</string>
    <string name="pref_key_restore_tabs_on_startup" translatable="false">pref_key_restore_tabs_on_startup</string>
    <string name="pref_key_search_in_new_tab" translatable="false">pref_key_search_in_new_tab</string>
    <string name="pref_key_show_download_confirmation" translatable="false">pref_key_show_download_confirmation</string>
    <string name="pref_key_long_click_tab" translatable="false">pref_key_long_click_tab</string>
    <string name="pref_key_show_undo_tab" translatable="false">pref_key_show_undo_tab</string>
    <string name="pref_key_show_update" translatable="false">pref_key_show_update</string>
    <string name="pref_key_support_multiple_window" translatable="false">pref_key_support_multiple_window</string>
    <string name="pref_key_swap_tabs_and_bookmarks" translatable="false">pref_key_swap_tabs_and_bookmarks</string>
    <string name="pref_key_tab_list_item_show_close_button" translatable="false">pref_key_tab_list_item_show_close_button</string>
    <string name="pref_key_url_in_new_tab" translatable="false">pref_key_url_in_new_tab</string>
    <string name="pref_key_use_bottom_sheets" translatable="false">pref_key_use_bottom_sheets</string>
    <string name="pref_key_vibrate_on_tab_close" translatable="false">pref_key_vibrate_on_tab_close</string>
</resources>