<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_general">

    <Preference
        android:key="home"
        android:title="@string/home"
        app:icon="@drawable/ic_action_home_oval" />

    <Preference
        android:key="search"
        android:title="@string/search"
        app:icon="@drawable/ic_search_oval" />

    <Preference
        android:key="suggestions_choice"
        android:title="@string/search_suggestions"
        app:icon="@drawable/ic_list_oval" />

    <Preference
        android:key="suggestions_number"
        android:title="@string/suggest"
        app:icon="@drawable/ic_list_number_oval" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/home">

        <Preference
            android:key="image_url"
            android:title="@string/image_url"
            app:icon="@drawable/ic_image_oval" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_advanced">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_show_download_confirmation"
            android:title="@string/pref_title_download_dialog"
            android:summary="@string/recommended"
            app:singleLineTitle="false"
            app:icon="@drawable/ic_cloud_download_oval" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_show_update"
            android:title="@string/update_message"
            android:summary="@string/recommended"
            app:singleLineTitle="false"
            app:icon="@drawable/ic_action_refresh_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="@bool/pref_default_menu_show_exit"
            android:key="@string/pref_key_menu_show_exit"
            android:title="@string/pref_title_menu_show_exit"
            android:summary="@string/pref_summary_menu_show_exit"
            app:icon="@drawable/ic_action_delete_oval"
            app:singleLineTitle="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_load_images"
            android:summary="@string/recommended"
            android:title="@string/load_images"
            app:icon="@drawable/ic_image_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_support_multiple_window"
            android:summary="@string/recommended"
            android:title="@string/window"
            app:singleLineTitle="false"
            app:icon="@drawable/ic_baseline_open_in_new_24_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/pref_key_request_save_data"
            android:title="@string/save_data"
            app:icon="@drawable/ic_data_save_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="show_ssl"
            android:summary="@string/recommended"
            android:title="@string/show_ssl"
            app:icon="@drawable/ic_warn_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_cookies"
            android:summary="@string/recommended"
            android:title="@string/cookies"
            app:icon="@drawable/ic_cookie_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/pref_key_cookies_incognito"
            android:title="@string/incognito_cookies"
            app:icon="@drawable/ic_cookie_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="force_zoom"
            android:summary="@string/force_zoom_summary"
            android:title="@string/force_zoom"
            app:icon="@drawable/ic_force_zoom_oval" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_javascript"
            android:summary="@string/recommended"
            android:title="@string/java"
            app:icon="@drawable/ic_script_oval" />

        <Preference
            android:key="block_javascript"
            android:title="@string/block_javascript"
            app:icon="@drawable/ic_script_key_oval"/>

        <Preference
            android:key="agent"
            android:title="@string/agent"
            app:icon="@drawable/ic_about_oval" />

        <Preference
            android:key="@string/pref_key_default_text_encoding"
            android:title="@string/text_encoding"
            app:icon="@drawable/ic_text_variant_oval" />

    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
