<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/pref_category_portrait">
        <SwitchPreferenceCompat
            app:key="@string/pref_key_portrait_hide_status_bar"
            app:title="@string/pref_title_hide_status_bar"
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            />
        <SwitchPreferenceCompat
            app:key="@string/pref_key_portrait_hide_tool_bar"
            app:title="@string/pref_title_hide_tool_bar"
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/pref_category_landscape">
        <SwitchPreferenceCompat
            app:key="@string/pref_key_landscape_hide_status_bar"
            app:title="@string/pref_title_hide_status_bar"
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            />
        <SwitchPreferenceCompat
            app:key="@string/pref_key_landscape_hide_tool_bar"
            app:title="@string/pref_title_hide_tool_bar"
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>



    <PreferenceCategory android:title="@string/pref_category_general">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="cb_colormode"
            android:title="@string/color_mode"
            android:summary="@string/pref_summary_color_mode"
            app:iconSpaceReserved="false" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="cb_drawertabs"
            android:title="@string/tabs_in_drawer"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="cb_swapdrawers"
            android:title="@string/swap_bookmarks_and_tabs"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="fullscreen"
            android:title="@string/fullscreen"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="black_status_bar"
            android:title="@string/settings_black_status_bar"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="wideViewPort"
            android:summary="@string/recommended"
            android:title="@string/wideViewPort"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="overViewMode"
            android:summary="@string/recommended"
            android:title="@string/overViewMode"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="text_reflow"
            android:title="@string/reflow"/>
        <Preference
            android:key="app_theme"
            android:title="@string/theme"/>
        <Preference
            android:key="text_size"
            android:title="@string/title_text_size"/>
    </PreferenceCategory>
</PreferenceScreen>