<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_content_blocking">

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="@string/pref_key_content_control"
            android:title="@string/enable"
            android:summary="@string/settings_summary_content_control_toggle"
            app:icon="@drawable/ic_block_oval" />

        <Preference
            android:key="@string/pref_key_filterlist_auto_update"
            android:title="@string/content_control_update_mode"
            android:dependency="@string/pref_key_content_control"
            app:icon="@drawable/ic_action_refresh_oval" />

        <Preference
            android:key="@string/pref_key_filterlist_auto_update_frequency"
            android:title="@string/content_control_update_frequency"
            android:dependency="@string/pref_key_content_control"
            app:icon="@drawable/ic_update_oval" />

    </PreferenceCategory>

    <acr.browser.lightning.settings.fragment.PreferenceCategoryEx
        android:key="@string/pref_key_content_control_filters"
        android:title="@string/pref_category_filters"
        android:summary="@string/pref_category_summary_filters"
        android:dependency="@string/pref_key_content_control">
    </acr.browser.lightning.settings.fragment.PreferenceCategoryEx>

</androidx.preference.PreferenceScreen>
